<resources>
    <string name="app_name">Cook Together</string>
    <string name="location"> </string>
    <string name="button_go_to_map">Map</string>
    <string name="button_go_to_localization">localization</string>
    <string name="button_search_location">go To</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="login_text">Login !</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_authentication">AuthenticationActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="MEAL_KEY">meal_key</string>
    <string name="facebook_app_id">794014440752386</string>
    <string name="fb_login_protocol_scheme">fb794014440752386</string>
    <string name="CONVERSATION_KEY" />
    <string name="CONVERSATION_TITLE" />
    <string name="action_account">profile</string>
    <string name="action_message">messages</string>
    <string name="update_meal">Update Meal</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="facebook_provider_id">facebook.com</string>
    <string name="contact">Contact</string>
    <string name="add_day">Add Day</string>
    <string name="free_days">Free Days</string>
    <string name="type_location">Location</string>
    <string name="description">Please enter a short description of what type of food you would like to cook and how you imagined the meal together.</string>
    <string name="meal_title">Title</string>
    <string name="send_message_btn">Send</string>
    <string name="hint_messaging">type your message here ...</string>
    <string name="no_description">The user did not give any description. You can contact them to get more information .. :)</string>
    <string name="action_list_search">view in a list</string>
    <string name="action_map_search">view in a map</string>
    <string name="profile_description">Profile Description</string>
    <string name="bday">Birth date</string>
    <string name="start">GOT IT</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="slide_1_title">Cook Together</string>
    <string name="slide_1_desc">The easiest way to share good food</string>
    <string name="slide_2_title">Propose meals</string>
    <string name="slide_2_desc">Want to try a meal? Propose it and let people contact you</string>
    <string name="slide_3_title">Running out of ideas?</string>
    <string name="slide_3_desc">Check what people around you are proposing and contact them if interested!</string>
    <string name="message_empty">Please enter a message</string>
    <string name="enter_message">Enter message</string>
    <string name="new_meal">New Meal</string>
    <string name="my_meals">My Meals</string>
    <string name="search_meal">Search Meal</string>
    <string name="my_messages">My Messages</string>
    <string name="my_reservations">My reservations</string>
    <string name="reservations_accepted">Reservation accepted :</string>
    <string name="reservation_demands">Reservation demands :</string>
    <string name="description_not_editable">Desciption :</string>
    <string name="reserve">Reserve</string>

    <!--firebase db fields-->
    <string name="db_user_conversations">user-conversations</string>
    <string name="db_messages">messages</string>
    <string name="db_unread">unread</string>
    <string name="db_rank">rank</string>
    <string name="db_users">users</string>

    <!--error msg-->
    <string name="fail_load_conv">Failed to load Conversation.</string>
    <string name="fail_load_profile">"Failed to load profile. Please try logging out and back in."</string>
    <string name="newMessageIntent">newMessageNotification</string>
</resources>


