<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_meals"
            android:checked="true"
            android:icon="@drawable/ic_list_black_48dp"
            android:orderInCategory="@integer/MY_MEALS_ORDER"
            android:title="@string/my_meals" />
        <item
            android:id="@+id/nav_meal_detail"
            android:icon="@drawable/ic_add_circle_outline_black_48dp"
            android:orderInCategory="@integer/MEAL_DETAIL_ORDER"
            android:title="@string/new_meal" />
        <item
            android:id="@+id/nav_search_meal"
            android:icon="@drawable/ic_search_black_48dp"
            android:orderInCategory="@integer/SEARCH_MEAL_ORDER"
            android:title="@string/search_meal" />
        <item
            android:id="@+id/nav_my_reservations"
            android:icon="@drawable/ic_shopping_basket_black_24dp"
            android:orderInCategory="@integer/MY_RESERVATIONS_ORDER"
            android:title="@string/my_reservations" />
        <item
            android:id="@+id/nav_my_messages"
            android:icon="@drawable/ic_message_white_48dp"
            android:orderInCategory="@integer/MY_MESSAGES_ORDER"
            android:title="@string/my_messages" />
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:orderInCategory="100"
            android:title="@string/action_logout" />
    </group>
</menu>