<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/create_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/meal_title"
                android:maxLines="1" />

            <EditText
                android:id="@+id/create_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:hint="@string/description"
                android:maxLines="5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    style="@style/Header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/free_days" />

                <LinearLayout
                    android:id="@+id/create_list_of_days"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

                <Button
                    android:layout_marginTop="10dp"
                    android:id="@+id/create_new_day_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_day" />
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/type_location"
                android:ems="10"
                android:id="@+id/create_location"
                android:maxLines="1"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/location_options"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/contact_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>
